--- a/curso-html.html
+++ b/curso-html.html
@@ -16,7 +16,7 @@
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso de HTML5 e CSS3">
             <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
             
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/riSVzw1Snhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/riSVzwlSnhw?si=cCpDvANayuP4OFnd" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <a href="index.html"><img src="imagens/btn-back.png" alt="Voltar"></a>
 
